# filterworld

./: .flake8  CLAUDE.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yaml
configs/: default.yaml  dino.yaml
filterworld/: config.py  pipeline.py  precompute.py
filterworld/canvas/: canvas.py  pane.py
filterworld/cli/: main.py
filterworld/filters/: base.py  dino_filter.py  dinov1_filter.py  dinov2_filter.py  dinov3_filter.py  file_filter.py  hf_filter.py  identity_filter.py  vitmae_filter.py
filterworld/layers/: base.py  bbox_layer.py  depth_layer.py  feature_layer.py  image_layer.py  keypoint_layer.py  segmentation_layer.py
filterworld/media/: video.py
filterworld/writers/: base.py  video_writer.py
tests/: conftest.py  test_cli.py  test_config.py  test_pipeline.py  test_precompute.py
tests/test_canvas/: test_canvas.py  test_pane.py
tests/test_filters/: test_base.py  test_dinov1_filter.py  test_dinov2_filter.py  test_dinov3_filter.py  test_identity_filter.py  test_vitmae_filter.py
tests/test_layers/: test_feature_layer.py  test_image_layer.py
tests/test_media/: test_video.py
tests/test_writers/: test_video_writer.py
